# ssmr

./: .mise.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
session-manager-plugin/: Cargo.toml  README.md
session-manager-plugin/src/: args.rs  command.rs  error.rs  main.rs
ssm-lib/: Cargo.toml  README.md
ssm-lib/src/: config.rs  data_channel.rs  error.rs  lib.rs  message.rs  retry.rs  service.rs  session.rs  websocket_channel.rs
ssm-lib/src/message/: message_parser.rs
ssm-lib/src/session/: session_util.rs
