[workspace]
resolver = "2"
members = ["ssm-lib", "session-manager-plugin"]

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.27"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
rand = "0.9.1"
tokio = { version = "1.45.0" }
mockall = "0.13.1"
bitflags = "2.9.0"
strum = { version = "0.27.1", features = ["derive"] }
chrono = "0.4.41"
